<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginBottom="20dp">
        <ImageButton
            android:id="@+id/buttonDialogClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel_32dp"
            android:background="@android:color/transparent"
            android:layout_margin="20dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textTitleECBMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelTitleECBMode"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:visibility="gone"
        style="@style/TextAppearance.Material3.BodyLarge"/>
    <TextView
        android:id="@+id/textTitleCBCMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTitleCBCMode"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:visibility="gone"
        style="@style/TextAppearance.Material3.BodyLarge"/>
    <TextView
        android:id="@+id/textTitleCTRMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelTitleCTRMode"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:visibility="gone"
        style="@style/TextAppearance.Material3.BodyLarge"/>
    <TextView
        android:id="@+id/textTitleGCMMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelTitleGCMMode"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:visibility="gone"
        style="@style/TextAppearance.Material3.BodyLarge"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialogLayoutKey"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/labelKey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:ignore="MissingConstraints"
            app:counterEnabled="true"
            app:counterMaxLength="33">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/buttonGenerateKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_key_24dp"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogLayoutEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labelTextEncrypted"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogEncrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_content_copy_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogButtonEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/cipher"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogLayoutDecrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labelTextEncrypted"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogDecrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_content_copy_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogButtonDecrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/labelButtonDecipher"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogLayoutDecipher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labelTextDecipher"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogDecipher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:drawableEnd="@drawable/ic_content_copy_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>